--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@ title: "Snake - Thomas Hiron"
 	<canvas width="390" height="510">
 		Ce jeu n'est pas compatible sur votre navigateur.
 	</canvas>
+	<script type="text/javascript" src="snake.js"></script>
 </div>
